[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/playersprite/run3.png" type="Texture" id=1]
[ext_resource path="res://assets/playersprite/run9.png" type="Texture" id=2]
[ext_resource path="res://assets/playersprite/run5.png" type="Texture" id=3]
[ext_resource path="res://assets/playersprite/run6.png" type="Texture" id=4]
[ext_resource path="res://assets/playersprite/run8.png" type="Texture" id=5]
[ext_resource path="res://assets/playersprite/run7.png" type="Texture" id=6]
[ext_resource path="res://assets/playersprite/run4.png" type="Texture" id=7]
[ext_resource path="res://assets/playersprite/run2.png" type="Texture" id=8]
[ext_resource path="res://assets/playersprite/idle.png" type="Texture" id=9]
[ext_resource path="res://src/scripts/Player.gd" type="Script" id=10]
[ext_resource path="res://assets/playersprite/Strike3.png" type="Texture" id=11]
[ext_resource path="res://assets/playersprite/Strike2.png" type="Texture" id=12]
[ext_resource path="res://assets/playersprite/Strike1.png" type="Texture" id=13]
[ext_resource path="res://assets/playersprite/jump1.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": false,
"name": "strike",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.3315, 45.9194 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.6646, 37.5827 )

[sub_resource type="CircleShape2D" id=4]
radius = 1389.39

[node name="MainCharacter" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.12263, -0.973233 )
shape = SubResource( 2 )

[node name="RightAttack" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAttack"]
position = Vector2( 47.2749, 6.32455 )
shape = SubResource( 3 )
disabled = true

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="RightAttack" to="." method="_on_RightAttack_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
